[gd_scene load_steps=2 format=3 uid="uid://c8mpctxjui4yx"]

[ext_resource type="Script" path="res://scene/active_piece.gd" id="1_6xop3"]

[node name="ActivePiece" type="Node2D"]
script = ExtResource("1_6xop3")

[node name="FallTimer" type="Timer" parent="."]

[node name="MoveTimer" type="Timer" parent="."]

[node name="LockDelayTimer" type="Timer" parent="."]
